스텝간 작업 분리 및 데이터 공유

--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.projectlombok:lombok')
+
+
 }
